# SparseAttentionInfer

./: .gitignore  .gitmodules  DEVELOPER_GUIDE.md  README.md  pyproject.toml  requirements.txt
kernels/: __init__.py
kernels/cuda/: README.md  __init__.py  setup.py
kernels/triton/: __init__.py  bigbird_sparse_attn.py  universal_sparse_attn.py
profiling/: README.md  gpu_profiles.toml  sparse_decoder_prof.py  sparse_prof.py
profiling/doc/: README_cn.md
sparse_attention_bench/: __init__.py  config.py  paths.py
sparse_attention_bench/analytical/: estimator.py  evaluator.py  gpu_profiles.py  plotting.py  roofline.py  utils.py
sparse_attention_bench/attention/: __init__.py  base.py  dense_sdpa.py  gather_sparse.py  masked_sdpa.py  triton_backend.py  triton_bigbird_backend.py  triton_universal_backend.py
sparse_attention_bench/benchmarks/: bench_decoder.py  bench_layer.py  bench_matmul.py  bench_proxy.py
sparse_attention_bench/experiment_configs/: bigbird.yaml  dense.yaml  local_window.yaml  sweep_decoder_bigbird_keep_ratio.yaml  sweep_seq_len.yaml  sweep_seq_len_base_vs_bigbird.yaml  topk.yaml
sparse_attention_bench/metrics/: accuracy.py  flops.py  latency.py  memory.py  sparse_matmul.py
sparse_attention_bench/models/: attention_layer.py  decoder_block.py  kv_cache.py  proxy_models.py
sparse_attention_bench/patterns/: base.py  bigbird_pattern.py  causal_dense.py  local_window.py  topk_pattern.py
sparse_attention_bench/playground/: bigbird_heatmap.py
sparse_attentions/: __init__.py  utils.py
sparse_llm/: README.md
sparse_llm/qwen3/: adapter.py  (+4 more)
(+143 files in other folders)
