[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sparse-attention-infer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "triton",
    "matplotlib",
    "pyyaml",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sparse_attention_bench*", "sparse_attentions*", "kernels*"]
